Bug 919437 - Use the scrollport size as the inner size if it is set. r=tn, roc